objects/Trial_Pool__c.object
<CustomObject>
    <fields>
        <fullName>OwnerEmail__c</fullName>
        <label>OwnerEmail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Patient__c</fullName>
        <label>Patient</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Trial Pool</relationshipLabel>
        <relationshipName>Trial_Pool</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Trial__c</fullName>
        <label>Trial</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Trial Pool</relationshipLabel>
        <relationshipName>Trial_Pool</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Trial Pool</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TP-{0000}</displayFormat>
        <label>Trial Pool Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trial Pool</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>